Build a simple index.html file. Fix routes to static files.

--- a/If-you-wish-to-make-a-webpage.html
+++ b/If-you-wish-to-make-a-webpage.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>If you wish to make a webpage</title>
-    <link rel="stylesheet" href="../static/styles.css">
+    <link rel="stylesheet" href="static/styles.css">
 </head>
 <body style="font-family:'Open Sans'" class="container">
   <div class="row heading">
@@ -27,6 +27,6 @@
 
     </div>
   </div>
-<script src="../static/bundle.js"></script>
+<script src="static/bundle.js"></script>
 </body>
 </html>
