--- a/index.html
+++ b/index.html
@@ -1,9 +1,24 @@
-<!doctype html>
 <html>
-  <head>
-    <title>mah blahg</title>
-  </head>
-  <body>
-    <h1>Hey</h1>
-  </body>
+<head>
+    <title>Words</title>
+    <link rel="stylesheet" href="static/styles.css">
+</head>
+<body style="font-family:'Open Sans'" class="container">
+  <div class="row heading">
+    <div class="brand col-xs-6 col-xs-offset-0 col-sm-5 col-sm-offset-1 col-md-4 col-md-offset-2">
+      <a href="http://words.mikemaelzer.com">mikemaelzer/words</a>
+    </div>
+    <div class="align-right col-xs-6 col-sm-5 col-md-4">
+      
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">        
+        <h2>If you wish to make a webpage...</h2>
+        <p>I was in a quandry. I wanted to write some bloviating posts with stylized code snippets</p>
+        <a href="If-you-wish-to-make-a-webpage.html">Read more >></a>
+    </div>
+  </div>
+<script src="static/bundle.js"></script>
+</body>
 </html>
