--- a/src/layout.html
+++ b/src/layout.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>{{.Filename}}</title>
-    <link rel="stylesheet" href="../static/styles.css">
+    <link rel="stylesheet" href="static/styles.css">
 </head>
 <body style="font-family:'Open Sans'" class="container">
   <div class="row heading">
@@ -17,6 +17,6 @@
     {{.Body}}
     </div>
   </div>
-<script src="../static/bundle.js"></script>
+<script src="static/bundle.js"></script>
 </body>
 </html>
