Moved markdown files into their own folder. Removed unneeded js file. Add WTFPL license to the footer.

--- a/If-you-wish-to-make-a-webpage.html
+++ b/If-you-wish-to-make-a-webpage.html
@@ -9,7 +9,7 @@
       <a href="http://words.mikemaelzer.com">mikemaelzer/words</a>
     </div>
     <div class="align-right col-xs-6 col-sm-5 col-md-4">
-      November 28, 2014
+      November 29, 2014
     </div>
   </div>
   <div class="row">
@@ -23,10 +23,21 @@
 
 <p>I was in a quandry. I wanted to write some bloviating posts with stylized code snippets (sorry <a href="https://medium.com">medium</a>). I didn&rsquo;t want to pay any money (sorry <a href="https://svbtle.com/">svbtle</a>). I didn&rsquo;t want a solution that tries to do everything even though all I want to do is turn simple markdown files into html (sorry <a href="http://jekyllrb.com/">jekyll</a>). So I did what millions of people before me have done, I reinvented the wheel.</p>
 
-<p>Behold <a href="https://github.com/mmaelzer/mdp">mdp</a>, a command line tool that takes markdown files and a template file and does exactly what I want, it generates stupid html files. As an added bonus, I wanted to play around in <a href="https://golang.org/">Go</a>, and this provided an opportunity to make a tiny command line utility using golang. As expected, it was a delight.</p>
+<p>Behold <a href="https://github.com/mmaelzer/mdp">mdp</a>, a command line tool that takes markdown files and a template file and does exactly what I want, it generates stupid html files. As an added bonus, this gave me an opportunity to play around in <a href="https://golang.org/">Go</a>. What delight golang is.</p>
 
     </div>
   </div>
+  <footer>
+    <div class="row">
+      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
+        <hr>
+        <img src="static/297px-WTFPL.png" 
+             alt="Do What the Fuck You Want to Public License"
+             style="height:20px;width:auto;">
+        <a href="http://en.wikipedia.org/wiki/WTFPL">WTFPL License</a> - Mike Maelzer
+      </div>
+    </div>
+  </footer>
 <script src="static/bundle.js"></script>
 </body>
 </html>
