--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Words</title>
+    <title>index</title>
     <link rel="stylesheet" href="static/styles.css">
 </head>
 <body style="font-family:'Open Sans'" class="container">
@@ -9,16 +9,33 @@
       <a href="http://words.mikemaelzer.com">mikemaelzer/words</a>
     </div>
     <div class="align-right col-xs-6 col-sm-5 col-md-4">
-      
+      November 29, 2014
     </div>
   </div>
   <div class="row">
-    <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">        
-        <h2>If you wish to make a webpage...</h2>
-        <p>I was in a quandry. I wanted to write some bloviating posts with stylized code snippets</p>
-        <a href="If-you-wish-to-make-a-webpage.html">Read more >></a>
+    <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
+    <h2>If you wish to make a webpage&hellip;</h2>
+
+<blockquote>
+<p>If you wish to make a webpage, you must first boil the ocean.<br />
+ -Carl Sagan</p>
+</blockquote>
+
+<p><a href="If-you-wish-to-make-a-webpage.html">Read more&gt;&gt;</a></p>
+
     </div>
   </div>
+  <footer>
+    <div class="row">
+      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
+        <hr>
+        <img src="static/297px-WTFPL.png" 
+             alt="Do What the Fuck You Want to Public License"
+             style="height:20px;width:auto;">
+        <a href="http://en.wikipedia.org/wiki/WTFPL">WTFPL License</a> - Mike Maelzer
+      </div>
+    </div>
+  </footer>
 <script src="static/bundle.js"></script>
 </body>
 </html>
