--- a/src/layout.html
+++ b/src/layout.html
@@ -17,6 +17,17 @@
     {{.Body}}
     </div>
   </div>
+  <footer>
+    <div class="row">
+      <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
+        <hr>
+        <img src="static/297px-WTFPL.png" 
+             alt="Do What the Fuck You Want to Public License"
+             style="height:20px;width:auto;">
+        <a href="http://en.wikipedia.org/wiki/WTFPL">WTFPL License</a> - Mike Maelzer
+      </div>
+    </div>
+  </footer>
 <script src="static/bundle.js"></script>
 </body>
 </html>
