Add utf-8 meta tag to the layout.

--- a/If-you-wish-to-make-a-webpage.html
+++ b/If-you-wish-to-make-a-webpage.html
@@ -1,6 +1,8 @@
 <html>
 <head>
     <title>If you wish to make a webpage</title>
+    <meta charset="utf-8">
+    <meta description="Wordful words about things only a few people find interesting.">
     <link rel="stylesheet" href="static/styles.css">
 </head>
 <body style="font-family:'Open Sans'" class="container">
