--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
     <title>index</title>
+    <meta charset="utf-8">
+    <meta description="Wordful words about things only a few people find interesting.">
     <link rel="stylesheet" href="static/styles.css">
 </head>
 <body style="font-family:'Open Sans'" class="container">
@@ -21,7 +23,7 @@
  -Carl Sagan</p>
 </blockquote>
 
-<p><a href="If-you-wish-to-make-a-webpage.html">Read more&gt;&gt;</a></p>
+<p><a href="If-you-wish-to-make-a-webpage.html">Read more »</a></p>
 
     </div>
   </div>
