Add a love letter to reduce

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
 
 <p><a href="If-you-wish-to-make-a-webpage.html">Read more »</a></p>
 
+<h2>A love letter to reduce</h2>
+
+<p>Oh <code>reduce</code>, how you are taken for granted, shoved into a corner, ignored for your more popular siblings <code>map</code> and <code>filter</code>.</p>
+
+<p><a href="A-love-letter-to-reduce.html">Read more »</a></p>
+
     </div>
   </div>
   <footer>
