Add a 'Last updated' before the date to reflect what the date means.

--- a/src/layout.html
+++ b/src/layout.html
@@ -11,7 +11,7 @@
       <a href="http://words.mikemaelzer.com">mikemaelzer/words</a>
     </div>
     <div class="align-right col-xs-6 col-sm-5 col-md-4">
-      {{.Date}}
+      Last updated {{.Date}}
     </div>
   </div>
   <div class="row">
