--- a/If-you-wish-to-make-a-webpage.html
+++ b/If-you-wish-to-make-a-webpage.html
@@ -11,7 +11,7 @@
       <a href="http://words.mikemaelzer.com">mikemaelzer/words</a>
     </div>
     <div class="align-right col-xs-6 col-sm-5 col-md-4">
-      November 29, 2014
+      Last updated November 29, 2014
     </div>
   </div>
   <div class="row">
