Updates to header and footer. Updated If-you-wish-to-make-a-webpage.

--- a/src/layout.html
+++ b/src/layout.html
@@ -8,7 +8,9 @@
 <body style="font-family:'Open Sans'" class="container">
   <div class="row heading">
     <div class="brand col-xs-6 col-xs-offset-0 col-sm-5 col-sm-offset-1 col-md-4 col-md-offset-2">
-      <a href="http://words.mikemaelzer.com">mikemaelzer/words</a>
+      <a href="http://mikemaelzer.com">mikemaelzer</a>
+      /
+      <a href="http://words.mikemaelzer.com">words</a>
     </div>
     <div class="align-right col-xs-6 col-sm-5 col-md-4">
       Last updated {{.Date}}
@@ -26,7 +28,11 @@
         <img src="static/297px-WTFPL.png" 
              alt="Do What the Fuck You Want to Public License"
              style="height:20px;width:auto;">
-        <a href="http://en.wikipedia.org/wiki/WTFPL">WTFPL License</a> - Mike Maelzer
+        <a href="http://en.wikipedia.org/wiki/WTFPL">WTFPL</a>
+        •
+        <a href="https://github.com/mmaelzer/mmaelzer.github.io">source</a>
+        •
+        Mike Maelzer
       </div>
     </div>
   </footer>
