--- a/If-you-wish-to-make-a-webpage.html
+++ b/If-you-wish-to-make-a-webpage.html
@@ -8,7 +8,9 @@
 <body style="font-family:'Open Sans'" class="container">
   <div class="row heading">
     <div class="brand col-xs-6 col-xs-offset-0 col-sm-5 col-sm-offset-1 col-md-4 col-md-offset-2">
-      <a href="http://words.mikemaelzer.com">mikemaelzer/words</a>
+      <a href="http://mikemaelzer.com">mikemaelzer</a>
+      /
+      <a href="http://words.mikemaelzer.com">words</a>
     </div>
     <div class="align-right col-xs-6 col-sm-5 col-md-4">
       Last updated November 29, 2014
@@ -25,7 +27,19 @@
 
 <p>I was in a quandry. I wanted to write some bloviating posts with stylized code snippets (sorry <a href="https://medium.com">medium</a>). I didn&rsquo;t want to pay any money (sorry <a href="https://svbtle.com/">svbtle</a>). I didn&rsquo;t want a solution that tries to do everything even though all I want to do is turn simple markdown files into html (sorry <a href="http://jekyllrb.com/">jekyll</a>). So I did what millions of people before me have done, I reinvented the wheel.</p>
 
-<p>Behold <a href="https://github.com/mmaelzer/mdp">mdp</a>, a command line tool that takes markdown files and a template file and does exactly what I want, it generates stupid html files. As an added bonus, this gave me an opportunity to play around in <a href="https://golang.org/">Go</a>. What delight golang is.</p>
+<p>Behold <a href="https://github.com/mmaelzer/mdp">mdp</a>, a command line tool that takes markdown files and a template file and does exactly what I want, it generates stupid html files. As an added bonus, this gave me an opportunity to play around in <a href="https://golang.org/">Go</a>.</p>
+
+<p>Now I run a simple <a href="https://github.com/mmaelzer/mmaelzer.github.io/blob/master/build.sh">build script</a> to generate the whole shebang.</p>
+
+<h3>build.sh</h3>
+
+<pre><code class="language-bash"># Generate html from markdown using the wonderful mdp tool
+mdp -i &quot;src/md/*.md&quot; -o . -t src/layout.html
+# Uglify and concat our js files into a single bundle
+uglifyjs -c -m -o static/bundle.js $(find src/js/ -name &quot;*.js&quot;)
+# Concat our css files into a single file
+cat src/css/*.css &gt; static/styles.css
+</code></pre>
 
     </div>
   </div>
@@ -36,7 +50,11 @@
         <img src="static/297px-WTFPL.png" 
              alt="Do What the Fuck You Want to Public License"
              style="height:20px;width:auto;">
-        <a href="http://en.wikipedia.org/wiki/WTFPL">WTFPL License</a> - Mike Maelzer
+        <a href="http://en.wikipedia.org/wiki/WTFPL">WTFPL</a>
+        •
+        <a href="https://github.com/mmaelzer/mmaelzer.github.io">source</a>
+        •
+        Mike Maelzer
       </div>
     </div>
   </footer>
