--- a/A-love-letter-to-reduce.html
+++ b/A-love-letter-to-reduce.html
@@ -3,9 +3,10 @@
     <title>A love letter to reduce</title>
     <meta charset="utf-8">
     <meta description="Wordful words about things only a few people find interesting.">
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="static/styles.css">
 </head>
-<body style="font-family:'Open Sans'" class="container">
+<body style="font-family:'Open Sans'" class="container-fluid">
   <div class="row heading">
     <div class="brand col-xs-6 col-xs-offset-0 col-sm-5 col-sm-offset-1 col-md-4 col-md-offset-2">
       <a href="http://mikemaelzer.com">mikemaelzer</a>
