Add part 2 of 'One scope two scope red scope blue scope'

--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
   </div>
   <div class="row">
     <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
-    <h2>One scope two scope red scope blue scope</h2>
+    <h2>One scope two scope red scope blue scope (part 2)</h2>
+
+<p><em>April 18, 2015</em></p>
+
+<p>Here we are again, talking about JavaScript scoping. <a href="One-scope-two-scope-red-scope-blue-scope.html">Last time</a> we spoke of how <code>this</code> works: <code>this</code> refers to the object that&rsquo;s calling the function&hellip;</p>
+
+<p><a href="One-scope-two-scope-red-scope-blue-scope-(part-2).html">Read more »</a></p>
+
+<h2>One scope two scope red scope blue scope</h2>
 
 <p><em>December 6, 2014</em></p>
 
