--- a/Lessons-I-have-learned-after-a-decade-of-being-paid-to-program.html
+++ b/Lessons-I-have-learned-after-a-decade-of-being-paid-to-program.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>index</title>
+    <title>Lessons I have learned after a decade of being paid to program</title>
     <meta charset="utf-8">
     <meta description="Wordful words about things only a few people find interesting.">
     <meta name="viewport" content="width=device-width">
@@ -16,47 +16,19 @@
   </div>
   <div class="row">
     <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
-    <h2>One scope two scope red scope blue scope (part 2)</h2>
+    <h1>Lessons I have learned after a decade of professional programming</h1>
 
-<p><em>February 11, 2017</em></p>
-<p><a href="Lessons-I-have-learned-after-a-decade-of-being-paid-to-program.html">Lessons I have learned after a decade of being paid to program</a></p>
-
-
-<p><em>April 18, 2015</em></p>
-
-<p>Here we are again, talking about JavaScript scoping. <a href="One-scope-two-scope-red-scope-blue-scope.html">Last time</a> we spoke of how <code>this</code> works: <code>this</code> refers to the object that&rsquo;s calling the function&hellip;</p>
-
-<p><a href="One-scope-two-scope-red-scope-blue-scope-(part-2).html">Read more »</a></p>
-
-<h2>One scope two scope red scope blue scope</h2>
-
-
-<p><em>December 6, 2014</em></p>
-
-<p>Poke around the intertube, and you&rsquo;ll find an endless stream of questions around JavaScript scoping. There&rsquo;s no need for the confusion, scoping in JavaScript is super duper easy if you put aside whatever scoping you&rsquo;re accustomed to.</p>
-
-<p><a href="One-scope-two-scope-red-scope-blue-scope.html">Read more »</a></p>
-
-<h2>A love letter to reduce</h2>
-
-
-<p><em>Novemeber 24, 2014</em></p>
-
-<p>Oh <code>reduce</code>, how you are taken for granted, shoved into a corner, ignored for your more popular siblings <code>map</code> and <code>filter</code>.</p>
-
-<p><a href="A-love-letter-to-reduce.html">Read more »</a></p>
-
-<h2>If you wish to make a webpage&hellip;</h2>
-
-
-<p><em>November 23, 2014</em></p>
-
-<blockquote>
-<p>If you wish to make a webpage, you must first boil the ocean.<br />
- -Carl Sagan</p>
-</blockquote>
-
-<p><a href="If-you-wish-to-make-a-webpage.html">Read more »</a></p>
+<ol>
+<li>Don&rsquo;t worry too much about being a great programmer.</li>
+<li>Learn new things when your brain is hungry.</li>
+<li>Do other things when your brain is tired of programming.</li>
+<li>It&rsquo;s ok to try out things that are considered the new hotness.</li>
+<li>It&rsquo;s ok to try out things that are considered old and tired.</li>
+<li>Find things that tickle your curiosity.</li>
+<li>Be wary of the tribalism around technologies.</li>
+<li>Seek out feedback from others.</li>
+<li>When possible, be in a place where you get to work on problems you find interesting.</li>
+</ol>
 
     </div>
   </div>
