--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
   </div>
   <div class="row">
     <div class="col-xs-12 col-xs-offset-0 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
-    <h2>One scope two scope red scope blue scope (part 2)</h2>
 
+
+<h2>Lessons I have learned after a decade of being paid to program</h2>
 <p><em>February 11, 2017</em></p>
-<p><a href="Lessons-I-have-learned-after-a-decade-of-being-paid-to-program.html">Lessons I have learned after a decade of being paid to program</a></p>
+Just another list (JAL).
+<p><a href="Lessons-I-have-learned-after-a-decade-of-being-paid-to-program.html">Read more »</a></p>
 
 
+<h2>One scope two scope red scope blue scope (part 2)</h2>
 <p><em>April 18, 2015</em></p>
 
 <p>Here we are again, talking about JavaScript scoping. <a href="One-scope-two-scope-red-scope-blue-scope.html">Last time</a> we spoke of how <code>this</code> works: <code>this</code> refers to the object that&rsquo;s calling the function&hellip;</p>
